# cassiopeia

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_tokens.py  0003_add_users.py  0004_add_user_sub_to_daily_metrics.py
backend/src/cassiopeia/: config.py  db.py  main.py  models.py  schemas.py  seed.py  storage.py
backend/src/cassiopeia/importers/: bearable.py  garmin.py  oura.py
backend/src/cassiopeia/routers/: auth.py  backup.py  import_.py  metrics.py  sync.py
backend/tests/: test_bearable_import.py  test_metrics_api.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.html  garmin-fitsdk.d.ts
frontend/src/lib/: aggregation.ts  api.ts  auth.svelte.ts  crypto.ts  db.protocol.ts  db.ts  db.worker.ts  sync.svelte.ts  types.ts
frontend/src/lib/components/: Chart.svelte  ImportPanel.svelte  MetricToggle.svelte  Sidebar.svelte  SyncStatus.svelte
frontend/src/lib/importers/: bearable.ts  garmin.ts  oura.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/account/: +page.svelte
frontend/src/routes/dashboard/: +layout.svelte  +page.svelte
frontend/src/routes/dashboard/import/: +page.svelte
frontend/src/routes/dashboard/imports/: +page.svelte
frontend/src/routes/dashboard/metrics/: +page.svelte
frontend/src/routes/dashboard/sql/: +page.svelte
infra/: backend.conf.example  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
testdata/: bearable_dummy.csv  garmin_dummy.csv  oura_dummy_dailyactivity.csv  oura_dummy_dailyreadiness.csv  oura_dummy_dailysleep.csv
