[project]
name = "cassiopeia"
version = "0.1.0"
description = "Health tracking backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "python-multipart",
    "pandas",
    "authlib>=1.6.9",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "mypy",
    "pandas-stubs>=3.0.0.260204",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
mypy_path = "src"
packages = ["cassiopeia"]

[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/cassiopeia"]
